Crash when adding Workspace after appending Brushes #64407

Closed
opened 2019-05-09 23:31:26 +02:00 by Johannes L · 6 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-09 13:13, hash: 6ef48b1318

Short description of error
Blender crashes after importing Brushes and then adding a new workspace. (Grease Pencil Brushes from Blender Cloud)

Exact steps for others to reproduce the error
Open clean Blender > Append Brushes from "pepeland_GP_brush_pack_V1.blend" > add new workspace

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-09 13:13, hash: `6ef48b1318` **Short description of error** Blender crashes after importing Brushes and then adding a new workspace. (Grease Pencil Brushes from Blender Cloud) **Exact steps for others to reproduce the error** Open clean Blender > Append Brushes from "pepeland_GP_brush_pack_V1.blend" > add new workspace
Author

Added subscriber: @JohannesLubke

Added subscriber: @JohannesLubke

Added subscribers: @antoniov, @ChristopherAnderssarian

Added subscribers: @antoniov, @ChristopherAnderssarian

Sounds like the same root issue as: #57758 (Crash when appending Grease Pencil object and switching to 2D Animation workspace)
@antoniov?

Sounds like the same root issue as: #57758 (Crash when appending Grease Pencil object and switching to 2D Animation workspace) @antoniov?

This issue was referenced by e2fdbf7599

This issue was referenced by e2fdbf75990f8baf8676ad7cf71e6176a82efbf1

Closed as duplicate of #57758

Closed as duplicate of #57758

Changed status from 'Duplicate' to: 'Resolved'

Changed status from 'Duplicate' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64407
No description provided.