Fix T64407: crash adding workspace after appending datablock

The files operator property should not be remembered for next
operator executions, gives unexpected effects when using the
operator again.