source/blender/editors/screen/workspace_edit.c
@@ -373,13 +373,15 @@ static int workspace_append_activate_exec(bContext *C, wmOperator *op)
         &bmain->workspaces, idname, offsetof(ID, name) + 2);
     BLI_assert(appended_workspace != NULL);
 
-    /* Reorder to last position. */
-    BKE_id_reorder(&bmain->workspaces, &appended_workspace->id, NULL, true);
+    if (appended_workspace) {
+      /* Reorder to last position. */
+      BKE_id_reorder(&bmain->workspaces, &appended_workspace->id, NULL, true);
 
-    /* Changing workspace changes context. Do delayed! */
-    WM_event_add_notifier(C, NC_SCREEN | ND_WORKSPACE_SET, appended_workspace);
+      /* Changing workspace changes context. Do delayed! */
+      WM_event_add_notifier(C, NC_SCREEN | ND_WORKSPACE_SET, appended_workspace);
 
-    return OPERATOR_FINISHED;
+      return OPERATOR_FINISHED;
+    }
   }
 
   return OPERATOR_CANCELLED;
